poke/testsuite/poke.pkl/cast-offsets-diag-1.pk
/* { dg-do compile } */

defvar x = 23#B as string; /* { dg-error "not allowed" } */
